--- a/css/style.css
+++ b/css/style.css
@@ -236,7 +236,7 @@ input[type="text"]:focus, input[type="email"]:focus, input[type="password"]:focu
 }
 
 .main-btn {
-    background: #6195FF;
+    background: #0098fd;
     color: #FFF;
 }
 
@@ -247,8 +247,8 @@ input[type="text"]:focus, input[type="email"]:focus, input[type="password"]:focu
 
 .outline-btn {
     background: transparent;
-    color: #6195FF !important;
-    border-color: #6195FF;
+    color: #0098fd !important;
+    border-color: #0098fd;
 }
 
 .main-btn:hover, .white-btn:hover, .outline-btn:hover {
@@ -265,8 +265,10 @@ input[type="text"]:focus, input[type="email"]:focus, input[type="password"]:focu
 }
 
 .navbar-brand .logo, .navbar-brand .logo-alt {
-    max-height: 50px;
+    max-height: 40px;
     display: block;
+    margin-top: 5px;
+   
 }
 
 #nav:not(.nav-transparent):not(.fixed-nav) .navbar-brand .logo-alt {
@@ -343,12 +345,12 @@ input[type="text"]:focus, input[type="email"]:focus, input[type="password"]:focu
     }
     .main-nav>li>a:hover, .main-nav>li>a:focus, .main-nav>li.active>a {
         background: transparent;
-        color: #6195FF;
+        color: #0098fd;
     }
     .main-nav>li>a:after {
         content: "";
         display: block;
-        background-color: #6195FF;
+        background-color: #0098fd;
         height: 2px;
         width: 0%;
         -webkit-transition: 0.2s width;
@@ -377,7 +379,7 @@ input[type="text"]:focus, input[type="email"]:focus, input[type="password"]:focu
         position: absolute;
         right: -50%;
         top: 0;
-        background-color: #6195FF;
+        background-color: #0098fd;
         width: 200px;
         -webkit-box-shadow: 0px 5px 5px -5px rgba(53, 64, 82, 0.2);
         box-shadow: 0px 5px 5px -5px rgba(53, 64, 82, 0.2);
@@ -465,10 +467,10 @@ input[type="text"]:focus, input[type="email"]:focus, input[type="password"]:focu
         transition: 0.2s all;
     }
     .main-nav>li.active {
-        border-left: 6px solid #6195FF;
+        border-left: 6px solid #0098fd;
     }
     .main-nav li a:hover, .main-nav li a:focus {
-        background-color: #6195FF;
+        background-color: #0098fd;
         color: #FFF;
         opacity: 1;
     }
@@ -513,7 +515,7 @@ input[type="text"]:focus, input[type="email"]:focus, input[type="password"]:focu
     width: 40px;
     height: 40px;
     margin-top: 5px;
-    margin-right: 5px;
+    margin-right: 10px;
     cursor: pointer;
     z-index: 99999;
 }
@@ -595,7 +597,13 @@ header {
 
 .home-content h1 {
   text-transform: uppercase;
+  padding-bottom: 30px;
 }
+
+.home-content p {
+    font-size: 22px;
+    color: #d1d3d4;
+  }
 .home-content button {
   margin-top: 20px;
 }
@@ -624,43 +632,45 @@ header {
 	About
 \*------------------------------------*/
 
-.about {
+.card {
     position: relative;
     text-align: center;
-    padding: 40px 20px;
+    padding: 20px 20px;
     border: 1px solid #EEE;
     margin: 15px 0px;
 }
 
-.about i {
+.card i {
     font-size: 36px;
-    color: #6195FF;
+    color: #0098fd;
     margin-bottom: 20px;
 }
 
-.about:after {
+.card:after {
     content: "";
     background-color: #1C1D21;
     position: absolute;
-    left: 0;
-    top: 0;
-    bottom: 0;
+    left: 0px;
+    right: 0px;
+    top: 0px;
+    bottom: 0px;
     width: 0%;
     z-index: -1;
     -webkit-transition: 0.2s width;
     transition: 0.2s width;
+   
 }
 
-.about:hover:after {
+.card:hover:after {
     width: 100%;
 }
 
-.about h3 {
+.card h3 {
     -webkit-transition: 0.2s color;
     transition: 0.2s color;
 }
 
-.about:hover h3 {
+.card:hover h3 {
     color: #fff;
 }
 
@@ -738,7 +748,7 @@ header {
     -ms-transform: translateY(100%);
     transform: translateY(100%);
     opacity: 0;
-    color: #6195FF;
+    color: #0098fd;
     margin-bottom: 5px;
     -webkit-transition: 0.2s all;
     transition: 0.2s all;
@@ -767,7 +777,7 @@ header {
     display: inline-block;
     width: 50px;
     height: 50px;
-    background-color: #6195FF;
+    background-color: #0098fd;
     color: #FFF;
     line-height: 50px;
     text-align: center;
@@ -796,7 +806,7 @@ header {
     left: 20px;
     text-align: center;
     font-size: 32px;
-    color: #6195FF;
+    color: #0098fd;
     border-radius: 50%;
 }
 
@@ -837,8 +847,8 @@ header {
     float: left;
     padding: 5px;
     border-radius: 50%;
-    color: #6195FF;
-    border: 1px solid #6195FF;
+    color: #0098fd;
+    border: 1px solid #0098fd;
     margin-right: 5px;
 }
 
@@ -852,7 +862,7 @@ header {
 }
 
 .number i {
-    color: #6195FF;
+    color: #0098fd;
     font-size: 36px;
     margin-bottom: 20px;
 }
@@ -907,7 +917,7 @@ header {
 }
 
 .pricing:hover .price-title {
-    color: #6195FF;
+    color: #0098fd;
 }
 
 .pricing .price {
@@ -918,7 +928,7 @@ header {
     text-align: center;
     margin: auto;
     border-radius: 50%;
-    border: 2px solid #6195FF;
+    border: 2px solid #0098fd;
 }
 
 .pricing .price h3 {
@@ -988,7 +998,7 @@ header {
 
 .testimonial span {
     font-size: 14px;
-    color: #6195FF;
+    color: #0098fd;
     text-transform: uppercase;
 }
 
@@ -1071,7 +1081,7 @@ header {
 }
 
 .team:hover .team-content span {
-    color: #6195FF;
+    color: #0098fd;
 }
 
 .team .team-social {
@@ -1088,7 +1098,7 @@ header {
     line-height: 50px;
     width: 50px;
     text-align: center;
-    background-color: #6195FF;
+    background-color: #0098fd;
     color: #FFF;
 }
 
@@ -1122,7 +1132,7 @@ header {
 }
 
 .blog .blog-meta li i {
-    color: #6195FF;
+    color: #0098fd;
     margin-right: 5px;
 }
 
@@ -1160,12 +1170,12 @@ header {
 
 .blog-tags a:hover {
   color: #FFF;
-  background-color: #6195FF;
+  background-color: #0098fd;
 }
 
 .blog-tags a i {
     margin-right: 3px;
-    color: #6195FF;
+    color: #0098fd;
 }
 
 .blog-tags a:hover i {
@@ -1213,7 +1223,7 @@ header {
     border-radius: 3px;
     margin-left: 5px;
     color: #FFF;
-    background-color: #6195FF;
+    background-color: #0098fd;
 }
 
 /* -- blog comments -- */
@@ -1266,11 +1276,11 @@ header {
 
 .blog-comments .media.author {
     background-color: #F4F4F4;
-    border-color: #6195FF;
-    border-bottom: 1px solid #6195FF;
+    border-color: #0098fd;
+    border-bottom: 1px solid #0098fd;
 }
 .blog-comments .media.author>.media-body>.media-heading {
-    color: #6195FF;
+    color: #0098fd;
 }
 
 .blog-comments .media.author + .media {
@@ -1328,7 +1338,7 @@ header {
     border: none;
     line-height: 40px;
     background-color: transparent;
-    color: #6195FF;
+    color: #0098fd;
 }
 
 /* -- category sidebar -- */
@@ -1347,11 +1357,11 @@ header {
 
 .widget-category a span {
     float: right;
-    color: #6195FF;
+    color: #0098fd;
 }
 
 .widget-category a:hover {
-    color: #6195FF;
+    color: #0098fd;
 }
 
 /* -- tags sidebar -- */
@@ -1367,7 +1377,7 @@ header {
 
 .widget-tags a:hover {
   color: #FFF;
-  background-color: #6195FF;
+  background-color: #0098fd;
 }
 
 /* -- posts sidebar -- */
@@ -1400,12 +1410,12 @@ header {
 .widget-post .blog-meta li {
     display: inline-block;
     margin-right: 5px;
-    color: #6195FF;
+    color: #0098fd;
     font-size: 12px;
 }
 
 .widget-post li i {
-    color: #6195FF;
+    color: #0098fd;
     margin-right: 5px;
 }
 
@@ -1422,7 +1432,7 @@ header {
 
 .contact i {
     font-size: 36px;
-    color: #6195FF;
+    color: #0098fd;
     margin-bottom: 20px;
 }
 
@@ -1458,7 +1468,7 @@ header {
 }
 
 .footer-logo>a>img {
-    max-height: 80px;
+    max-height: 100px;
 }
 
 .footer-follow {
@@ -1479,7 +1489,7 @@ header {
   line-height: 50px;
   text-align: center;
   border-radius: 3px;
-  background-color: #6195FF;
+  background-color: #0098fd;
   color:#FFF;
 }
 
@@ -1586,10 +1596,10 @@ header {
 }
 
 .owl-theme .owl-dots .owl-dot:hover span {
-    background: #6195FF;
+    background: #0098fd;
 }
 .owl-theme .owl-dots .owl-dot.active span {
-	  background: #6195FF;
+	  background: #0098fd;
 	  width:20px;
 }
 
@@ -1611,7 +1621,7 @@ header {
     -webkit-transform: translateY(-50%);
         -ms-transform: translateY(-50%);
             transform: translateY(-50%);
-    background: #6195FF;
+    background: #0098fd;
     color: #FFF;
   	padding: 0px;
   	width: 50px;
@@ -1631,7 +1641,7 @@ header {
 
 .owl-theme .owl-nav [class*='owl-']:hover {
     opacity: 0.8;
-    background: #6195FF;
+    background: #0098fd;
 }
 
 
@@ -1648,7 +1658,7 @@ header {
   	height: 50px;
   	line-height: 50px;
   	text-align: center;
-  	background: #6195FF;
+  	background: #0098fd;
   	border-radius:3px;
   	color: #FFF;
   	z-index: 9999;
@@ -1691,7 +1701,7 @@ header {
 }
 .preloader span {
     display: inline-block;
-    background-color: #6195FF;
+    background-color: #0098fd;
     width: 25px;
     height: 25px;
     -webkit-animation: 1s preload ease-in-out infinite;
